--- a/SRC/styles.css
+++ b/SRC/styles.css
@@ -12,9 +12,19 @@ body{
     font-size: 50px;
     font-style: italic;
     text-align: center;
+    align-content: center;
     background-image: url(assets/img/pizarron.jpg);
-    height: 100px;
+    height: 200px;
+    margin: 5cm;
+    margin-block-start: 1em;
+    border-radius: 3em;
+    border-color: aqua;
+    border-style: solid;
+    border-width: .5em;
+    
+
 }
+
 
 .EGIPTO {
     background-image: url("assets/img/egipto.jpg");
@@ -50,4 +60,41 @@ body{
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: rgb(22, 28, 48);
 
+}
+
+.AFRICA {
+
+    background-image: url(assets/img/africa.jpg);
+    
+}
+.AFRICA h4{
+
+    text-align: center;
+    font-size: 65px;
+    color: blue;
+    font-style: italic;
+}
+
+.AFRICA p{
+
+    font-size: x-large;
+    font-style: oblique;
+    color: chartreuse;
+}
+
+.AFRICA h5{
+
+    text-align: center;
+    font-size: 50px;
+    color: darkblue;
+}
+
+.AFRICA button{
+    font-size: 25px;
+    background-color: black;
+ 
+}
+
+nav{
+    display: inline-block;
 }
